bopwire/deps/librats/src/librats_c.h

// Opaque handle to a RatsClient instance
typedef void* rats_client_t;
// Memory helpers for returned strings
RATS_API void rats_string_free(const char* str);
// Client lifecycle
RATS_API rats_client_t rats_create(int listen_port);
RATS_API rats_client_t rats_create_with_id(int listen_port, const char* peer_id); // peer_id: 40-hex wallet address; null/empty = auto-generate
RATS_API void rats_destroy(rats_client_t client);
RATS_API int rats_start(rats_client_t client);
RATS_API void rats_stop(rats_client_t client);
// Basic operations
RATS_API int rats_connect(rats_client_t client, const char* host, int port);
// Info
RATS_API int rats_get_peer_count(rats_client_t client);
RATS_API char* rats_get_our_peer_id(rats_client_t client); // caller must free with rats_string_free
RATS_API char** rats_get_validated_peer_ids(rats_client_t client, int* count); // caller must free array and strings
// Error codes
typedef enum {
    RATS_SUCCESS = 0,
    RATS_ERROR_INVALID_HANDLE = -1,
    RATS_ERROR_INVALID_PARAMETER = -2,
    RATS_ERROR_NOT_RUNNING = -3,
    RATS_ERROR_OPERATION_FAILED = -4,
    RATS_ERROR_PEER_NOT_FOUND = -5,
    RATS_ERROR_MEMORY_ALLOCATION = -6,
    RATS_ERROR_JSON_PARSE = -7
} rats_error_t;
// C callbacks
typedef void (*rats_connection_cb)(void* user_data, const char* peer_id);
typedef void (*rats_binary_cb)(void* user_data, const char* peer_id, const void* data, size_t size);
typedef void (*rats_disconnect_cb)(void* user_data, const char* peer_id);
typedef void (*rats_message_cb)(void* user_data, const char* peer_id, const char* message_data);
typedef void (*rats_peers_found_cb)(void* user_data, const char** peer_addresses, int count);
// Peer configuration
RATS_API rats_error_t rats_set_max_peers(rats_client_t client, int max_peers);
// Connection methods
RATS_API rats_error_t rats_disconnect_peer_by_id(rats_client_t client, const char* peer_id);
// Binary data operations
RATS_API rats_error_t rats_send_binary(rats_client_t client, const char* peer_id, 
                                          const void* data, size_t size);
// DHT Discovery
//
// PRIVATE OVERLAY: bopwire's DHT speaks the standard KRPC/DHT wire protocol but must
// NOT bootstrap off the public mainline routers. Call rats_dht_set_bootstrap() with the
// VPS host:port BEFORE rats_start_dht_discovery() (or pass them through the latter). With
// no bootstrap configured the DHT starts isolated (only learns nodes that contact it).

// Replace the private DHT bootstrap list with a single host:port (the VPS). Pass host=NULL
// (or port=0) to clear the list. Process-wide; takes effect on the next bootstrap.
RATS_API rats_error_t rats_dht_set_bootstrap(rats_client_t client, const char* host, int port);
// Start DHT discovery. If bootstrap_host is non-NULL, it is installed as the (single)
// private bootstrap node before starting — equivalent to rats_dht_set_bootstrap()
// followed by rats_start_dht_discovery(). Pass bootstrap_host=NULL to start with whatever
// was previously configured via rats_dht_set_bootstrap().
RATS_API rats_error_t rats_start_dht_discovery(rats_client_t client, int dht_port);
RATS_API void rats_stop_dht_discovery(rats_client_t client);
RATS_API int rats_is_dht_running(rats_client_t client);
// Announce that this client holds [content_hash] on the DHT and start
// looking for other holders. The peers-found callback is invoked
// asynchronously by the DHT thread every time librats receives a fresh
// batch of peer addresses.
//
// OWNERSHIP CONTRACT (bopwire patch — diverges from upstream
// librats which used transient pointers): every `const char*` in the
// `peer_addresses` array, AND the array itself, are heap-allocated
// before the callback fires. The consumer MUST free each entry and
// the array via `rats_string_free` (or plain `free()`), even on no-op
// consumption. Failing to free per-batch leaks ~32 bytes per
// peer address per delivery. The contract change makes the API safe
// for callers (e.g. Dart's NativeCallable.listener) that can't read
// the strings synchronously inside the callback.
RATS_API rats_error_t rats_announce_for_hash(rats_client_t client, const char* content_hash, int port,
                                               rats_peers_found_cb callback, void* user_data);
RATS_API size_t rats_get_dht_routing_table_size(rats_client_t client);
// Message Exchange API
RATS_API rats_error_t rats_on_message(rats_client_t client, const char* message_type, 
                                         rats_message_cb callback, void* user_data);
RATS_API rats_error_t rats_send_message(rats_client_t client, const char* peer_id, 
                                           const char* message_type, const char* data);
// Enhanced callbacks
RATS_API void rats_set_connection_callback(rats_client_t client, rats_connection_cb cb, void* user_data);
RATS_API void rats_set_binary_callback(rats_client_t client, rats_binary_cb cb, void* user_data);
RATS_API void rats_set_disconnect_callback(rats_client_t client, rats_disconnect_cb cb, void* user_data);
// Server configuration
RATS_API void rats_add_stun_server(rats_client_t client, const char* host, uint16_t port);
// Public address discovery
RATS_API char* rats_get_public_address(rats_client_t client); // returns "ip:port" string, caller must free
RATS_API char* rats_discover_public_address(rats_client_t client, const char* stun_server, 
                                             uint16_t port, int timeout_ms); // caller must free